modified index.html and remodified README.md
Added images to the index.html file to a make
links to every recipe more intuitive.
Used html code to format the README.md file by
adding unordered list and using tha paragrahp
 element.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
         <h1>Odin Recipes</h1>
         <h3>List of different recipes</h3>
         <ul>
-          <li><a href="recipes/jollof.html" >Jollof rice Recipe</a></li>
-          <li><a href="recipes/suya.html">Suya Recipe</a></li>
-            <li><a href="recipes/fufu.html">Fufu Recipe</a></li>
+          <li><a href="recipes/jollof.html" ><strong>Nigerian Jollof rice Recipe</strong></a></li>
+              <img src="images/jollof.jpg" alt="jollof rice image" height="160" width="160">
+              <p></p>
+
+          <li><a href="recipes/suya.html"><strong>Nigerian Suya Recipe</strong></a></li>
+              <img src="images/suya.jpg" alt="suya image" height="160" width="160"><br>
+              <p></p>
+
+            <li><a href="recipes/fufu.html"><strong>West African Fufu Recipe</strong></a></li>
+               <img src="images/fufu.jpg" alt="fufu image" height="160" width="160">
         </ul>
       
 
